--- a/Qiita記事用_BERT.ipynb
+++ b/Qiita記事用_BERT.ipynb
@@ -1274,6 +1274,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "5994bec6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "「8ケタの数字+\"-(半角ハイフン)\"+アルファベット」で表されています。アルファベットは品詞を表していて、\n",
+    "それぞれ\n",
+    "  n= 名詞\n",
+    "  v= 動詞\n",
+    "  a= 形容詞\n",
+    "  r= 副詞\n",
+    "  \n",
+    "同義語(synonym)\n",
+    "その概念を言い表すのに使用される語です。\n",
+    "英語のものは英語ワードネットのもので、日本語のものは複数の他言語ワードネットと対日辞書を用いて作成しました。\n",
+    "その後ある程度までは人手で修正しましたが、まだチェックしきれていないものも残っており、誤りが含まれている、\n",
+    "あるいは含まれるべきものが含まれていないという場合もございます。 同義語の扱いについての詳しい話はこちら。\n",
+    "\n",
+    "関連synsetとのリンク\n",
+    "Hype　Hypernym　上位語　当該synsetが相手synsetに包含される　\"canis familiaris\"(02084071-n)は\"domestic animal\"(01317541-n)と\"canid\"(02083346-n)に包含される\n",
+    "Hypo　Hyponym　下位語　当該synsetが相手synsetを包含する　\"canis familiaris\"(02084071-n)は\"toy canis familiaris\"(02085374-n),\"mutt\"(02084861-n),\"pooch\"(02084732-n),...を包含する\n",
+    "Mprt　Meronyms --- Part　被構成要素(部分)　当該synsetが相手synsetという部分によって構成される　\"canis familiaris\"(02084071-n)は\"flag\"(02158846-n)を一部分として持つ\n",
+    "Hprt　Holonyms --- Part　構成要素(部分)　当該synsetが部分として相手synsetを構成する　\"flag\"(02158846-n)は\"canis familiaris\"(02084071-n)や\"cervid\"(02430045-n)の一部分である\n",
+    "Hmem　Holonyms --- Member　構成要素(構成員)　当該synsetが相手synsetの構成員である　\"canis familiaris\"(02084071-n)は\"02083863-n\"(canis)や\"pack\"(07994941-n)の構成員である\n",
+    "Mmem　Meronyms --- Member　被構成要素(構成員)　当該synsetが相手synsetという構成員によって構成される　\"canis\"(02083863-n)は\"canis familiaris\"(02084071-n)や\" jackal\"(02115096-n)、\"wolf\"(02114100-n)を構成員として持つ\n",
+    "Msub　Meronyms --- Substance　被構成要素(物質・材料)　当該synsetが相手synsetという物質or材料によって構成される　\"ozone\"(14972807-n)は\"atomic number 8\"(14648100-n)という物質を構成要素として持つ\n",
+    "Hsub　Holonyms --- Substance　構成要素(物質・材料)　当該synsetが相手synsetを構成する物質or材料である　\"atomic number 8\"(14648100-n)は\"ozone\"(14972807-n)や\"water\"(14845743-n)、\"air\"(14841267-n)を構成する物質である\n",
+    "Dmnc　Domain --- Category　被包含領域(カテゴリ)　当該synsetが相手synsetのカテゴリに属する　\"comet\"(09251407-n)は\"astronomy\"(06095022-n)のカテゴリに属する\n",
+    "Dmtc　In Domain --- Category　包含領域(カテゴリ)　当該synseが相手synsetが属するカテゴリである　\"astronomy\"(06095022-n)というカテゴリには\"uprise\"(01970348-v)や\"absolute magnitude\"(05090979-n)が属している\n",
+    "Dmnu　Domain --- Usage　被包含領域(語法)　当該synsetの用法が相手synsetの領域に限られる　\"jean\"(03594734-n)の用法は\"plural form\"(06295235-n)に限定される\n",
+    "Dmtu　In Domain --- Usage　包含領域(語法)　当該synsetの領域が相手synsetの用法を規定する　\"plural form\"(06295235-n)は\"jean\"(03594734-n)の用法を規定する\n",
+    "Dmnr　Domain --- Region　被包含領域(地域)　当該synsetが相手synsetの地域に属するものである　\"sake\"(07891433-n)は\"nippon\"(08921850-n)という地域に属している\n",
+    "Dmtr　In Domain --- Region　包含領域(地域)　当該synsetが相手synsetの属する地域である　\"nippon\"(08921850-n)は\"sake\"(07891433-n)の属する地域である\n",
+    "Inst　Instances　例　当該synsetは相手synsetの例である　\"seiji ozawa\"(11219502-n)は\"director\"(09952539-n)の例である\n",
+    "Hasi　Has Instance　例あり　当該synsetは相手synsetを例として持つ　\"director\"(09952539-n)は\"seiji ozawa\"(11219502-n)を例に持つ\n",
+    "Enta　Entails　含意　当該synsetを行う場合、必ず相手synsetも行っている　\"fleece\"(02319050-v)を行う場合、必ず\"charge\"(02320374-v)も行っている\n",
+    "Caus　Causes　引き起こし　当該synsetを行うと、相手synsetを引き起こす　\"project\"(02138075-v)を行うと、\"appear\"(00422090-v)を引き起こす\n",
+    "Also　See also　関連　当該synsetと相手synsetとの間に何らかの関連がある　\"white\"(00393105-a)は\"light\"(00408660-a)との間に何らかの関連がある\n",
+    "Attr　Attributes　属性　(a=形容詞のsynsetから見て)当該synsetが相手synsetという属性を表す際に使われる　\"white\"(00393105-a)は\"value\"(04979425-n)という属性を表す際に使われる\n",
+    "(n=名詞のsynsetから見て)当該synsetという属性を表す際に相手synsetを使う　\"value\"(04979425-n)という属性を表すのに\"white\"(00393105-a)を使う\n",
+    "Sim　Similar to　近似　当該synsetは表す意味が相手synsetと近似している　\"white\"(00393105-a)は意味が\"albescent\"(00393422-a)と近似している\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 93,
    "id": "a75adfde",
    "metadata": {},
@@ -2257,6 +2304,113 @@
     "display(wordMaster.head(1))\n",
     "# もともとのwordidと各synsetに対応するwordidが同じ行は削除\n",
     "wordMaster = wordMaster[wordMaster['wordid']!=wordMaster['sameWordid']]\n",
+    "display(wordMaster.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "999c5f9c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# こっちでも可\n",
+    "wordMaster =pd.read_sql_query(\n",
+    "    \"\"\"\n",
+    "    select\n",
+    "        wordid\n",
+    "        , lemma\n",
+    "        , pos\n",
+    "        , lang\n",
+    "        , synset\n",
+    "        , name\n",
+    "        , t_merge02.sameWordid as sameWordid\n",
+    "        , sameLemma\n",
+    "        , samePos\n",
+    "    from\n",
+    "        (\n",
+    "        select\n",
+    "            t_merge01.wordid as wordid\n",
+    "            , lemma\n",
+    "            , pos\n",
+    "            , lang\n",
+    "            , t_merge01.synset as synset\n",
+    "            , name\n",
+    "            , sameWordid\n",
+    "        from\n",
+    "            (\n",
+    "            select\n",
+    "                t_word.wordid as wordid\n",
+    "                , lemma\n",
+    "                , pos\n",
+    "                , lang\n",
+    "                , synset\n",
+    "            from\n",
+    "                (\n",
+    "                select\n",
+    "                    wordid\n",
+    "                    , lemma\n",
+    "                    , pos\n",
+    "                    , lang\n",
+    "                from\n",
+    "                    word\n",
+    "                where\n",
+    "                    lang='jpn'\n",
+    "                ) as t_word\n",
+    "            left join\n",
+    "                (\n",
+    "                select\n",
+    "                    wordid\n",
+    "                    , synset\n",
+    "                from\n",
+    "                    sense\n",
+    "                where\n",
+    "                    lang='jpn'\n",
+    "                ) as t_sense\n",
+    "            on\n",
+    "                t_word.wordid = t_sense.wordid\n",
+    "            ) as t_merge01\n",
+    "        left join\n",
+    "            (\n",
+    "            select\n",
+    "                synset\n",
+    "                , name\n",
+    "            from\n",
+    "                synset\n",
+    "            ) as t_synset\n",
+    "        on\n",
+    "            t_merge01.synset = t_synset.synset\n",
+    "        left join\n",
+    "            (\n",
+    "            select\n",
+    "                wordid as sameWordid\n",
+    "                , synset\n",
+    "            from\n",
+    "                sense\n",
+    "            where\n",
+    "                lang='jpn'\n",
+    "            ) as t_sense02\n",
+    "        on\n",
+    "            t_merge01.synset = t_sense02.synset\n",
+    "        ) as t_merge02\n",
+    "    left join\n",
+    "        (\n",
+    "        select\n",
+    "            wordid as sameWordid\n",
+    "            , lemma as sameLemma\n",
+    "            , pos as samePos\n",
+    "        from\n",
+    "            word\n",
+    "        where\n",
+    "            lang='jpn'\n",
+    "        ) as t_word02\n",
+    "    on\n",
+    "        t_merge02.sameWordid = t_word02.sameWordid\n",
+    "    where\n",
+    "        wordid<>t_merge02.sameWordid\n",
+    "    \"\"\"\n",
+    "    , conn\n",
+    ")\n",
     "display(wordMaster.head())"
    ]
   },
