--- a/Qiita記事用_GIS_Python2_ICAR.ipynb
+++ b/Qiita記事用_GIS_Python2_ICAR.ipynb
@@ -99,7 +99,7 @@
    "outputs": [],
    "source": [
     "# データをダウンロードするかどうか\n",
-    "DOWNLOAD = True"
+    "DOWNLOAD = False"
    ]
   },
   {
@@ -246,7 +246,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "01b493fa-e507-4128-837b-6a5208ce8c7b",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# 試しにバンド11のデータを1つ可視化\n",
@@ -332,7 +334,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1b4c0b63-592e-4867-a2fa-959c220a20ed",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# 各バンドのtifファイルのリスト\n",
@@ -2135,6 +2139,388 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a8c47d34-2c0b-4841-b358-320ad79c3e5f",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# テストデータの空間相関変数（最も近い学習データの空間相関変数を取得した結果）を可視化\n",
+    "png_path = 'content/drive/MyDrive/satelite/png/'\n",
+    "os.makedirs(png_path, exist_ok=True)\n",
+    "figsize=(8,6)\n",
+    "plt.rcParams['font.family'] = prop.get_name()\n",
+    "fig=plt.figure(figsize=figsize)\n",
+    "for k, node in enumerate(['z_car'+str(i+1) for i in classK]):\n",
+    "    plot_icar = ground_truth_2RasterCrs_concat_crop_exploded_stats_2point.loc[X_test.index,:].copy()\n",
+    "    icar = z_cars_arr_test[:,k]\n",
+    "    plot_icar[node] = icar\n",
+    "    ax = plt.subplot(3,4,k+1)\n",
+    "    divider = mpl_toolkits.axes_grid1.make_axes_locatable(ax)\n",
+    "    cax = divider.append_axes('right', '5%', pad='3%')\n",
+    "    img = plot_icar.plot(column=node, cmap='RdYlBu_r', edgecolor='k', legend=True, ax=ax, cax=cax, linewidth=0.05, markersize=1)\n",
+    "    cax.tick_params(labelsize='4', width=0.4, length=5)\n",
+    "    plt.setp(ax.get_xticklabels(), fontsize=4)\n",
+    "    plt.setp(ax.get_yticklabels(), fontsize=4)\n",
+    "    ax.set_title(node+' '+area_use_categories_le[k], fontsize=4)\n",
+    "    re_shape_tsukuba_mirai_2RasterCrs.plot(facecolor='none', edgecolor='k', alpha=0.8, ax=ax, linewidth=0.2)\n",
+    "    ax.yaxis.offsetText.set_fontsize(4)\n",
+    "    ax.yaxis.set_major_formatter(ptick.ScalarFormatter(useMathText=True))\n",
+    "    ax.ticklabel_format(style='sci', axis='y', scilimits=(0,0))\n",
+    "    ax.grid(False)\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "plt.figure().clear()\n",
+    "plt.close()\n",
+    "plt.cla()\n",
+    "plt.clf()\n",
+    "del plot_icar, fig\n",
+    "gc.collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7b4d8b8-e274-438d-be2a-6b6e6e427ab6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with pm.Model() as model:    \n",
+    "    # coords(次元やインデックスを定義)\n",
+    "    model.add_coord('data', values=range(X_train.shape[0]), mutable=True)\n",
+    "    model.add_coord('var', values=explanatory_variables, mutable=True)\n",
+    "    model.add_coord('obj_var', values=sorted(y_train[objective_variables].unique()), mutable=True)\n",
+    "    \n",
+    "    # 変数\n",
+    "    x = pm.MutableData('x', X_train[explanatory_variables].to_numpy(), dims=('data', 'var'))\n",
+    "    y = pm.MutableData(\"y\", y_train[objective_variables].to_numpy(), dims=('data', ))\n",
+    "    weights = pm.MutableData(\"weights\", sample_ws, dims=('data', ))\n",
+    "    print('x shape', x.eval().shape)\n",
+    "    print('y shape', y.eval().shape)\n",
+    "    print('weights shape', weights.eval().shape)\n",
+    "\n",
+    "    # 分散\n",
+    "    tau = pm.Uniform('tau', lower=0, upper=100, dims=(\"obj_var\", ))\n",
+    "    print('tau shape', tau.eval().shape)\n",
+    "    \n",
+    "    # 推論パラメータの事前分布\n",
+    "    coef_ = pm.Normal('coef', mu=0.0, sigma=1, dims=(\"var\",'obj_var'))  # 各係数の事前分布は正規分布\n",
+    "    intercept_ = pm.Normal('intercept', mu=0.0, sigma=1.0, dims=(\"obj_var\", ))  # 切片の事前分布は正規分布\n",
+    "    print('coef shape', coef_.eval().shape)\n",
+    "    print('intercept shape', intercept_.eval().shape)\n",
+    "    \n",
+    "    # ICARを10個入ったリストを作ってconcatenateしてdata数×class数の空間相関変数としている\n",
+    "    ICAR10s = [pm.ICAR('z_car'+str(i+1), W=adj_symmetry, sigma=1, dims=('data', )).reshape((len(y.eval()), 1)) for i, k in enumerate(classK)]\n",
+    "    ICAR10s = pm.math.concatenate(ICAR10s, axis=1)\n",
+    "\n",
+    "    print('ICAR10s type', ICAR10s.type)\n",
+    "    # linear model --> 𝑦 = coef_𝑥 + intercept_ + eps_ + ICARs\n",
+    "    mu = pm.Deterministic(\"mu\", x.dot(coef_)+intercept_+(ICAR10s*tau), dims=('data', 'obj_var'))\n",
+    "    print('x.dot(coef_) shape', x.dot(coef_).eval().shape)\n",
+    "    print('ICAR10s*tau type', (ICAR10s*tau).type)\n",
+    "    theta = pm.Deterministic(\"theta\", pm.math.softmax(mu, axis=1), dims=('data', 'obj_var'))  # axis設定しないとダメ\n",
+    "    #y_pred = pm.Categorical(\"y_pred\", p=theta, observed=y, dims='data')\n",
+    "    y_pred = pm.Potential('y_pred', (weights * pm.logp(pm.Categorical.dist(p=theta), y)).sum(axis=0), dims=('data', ))\n",
+    "    \n",
+    "# モデル構造\n",
+    "modeldag = pm.model_to_graphviz(model)\n",
+    "display(modeldag)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3104f3cf-e208-4029-8478-bf34c3a7e65a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "# MCMC実行\n",
+    "# バックエンドでNumPyroで実行\n",
+    "with model:\n",
+    "    # MCMCによる推論\n",
+    "    trace = pm.sample(draws=3000, tune=1000, chains=3, nuts_sampler=\"numpyro\", random_seed=1, return_inferencedata=True, idata_kwargs={\"log_likelihood\": False})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35b9b30d-559d-4dd8-b018-f2f4c4592454",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 保存\n",
+    "model_dir = 'content/drive/MyDrive/satelite/model'\n",
+    "os.makedirs(model_dir, exist_ok=True)\n",
+    "# データの保存 to_netcdfの利用\n",
+    "trace.to_netcdf(os.path.join(model_dir, 'model_ICAR10_sigma10.nc'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fffe674d-f181-4b09-b630-b22c06cbb540",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load\n",
+    "model_dir = 'content/drive/MyDrive/satelite/model'\n",
+    "os.makedirs(model_dir, exist_ok=True)\n",
+    "# データの読み込み from_netcdfの利用\n",
+    "trace = az.from_netcdf(os.path.join(model_dir, 'model_ICAR10_sigma10.nc'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4f686ee-8ec3-4371-8775-2c4319ae73cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot_trace\n",
+    "az.plot_trace(trace, backend_kwargs={\"constrained_layout\":True}, var_names=[\"coef\",\"intercept\",'tau'])#+['z_car'+str(i) for i in range(1,11)])\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c168f2e-51bf-4c8c-86f0-3425f579ddb9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# MCMCの収束を評価\n",
+    "rhat_vals = az.rhat(trace).values()\n",
+    "\n",
+    "# 最大のRhatを確認\n",
+    "result = np.max([np.max(i.values) for i in rhat_vals])# if i.name in [\"coef\",\"intercept\",'z_car','mu','theta','tau']])\n",
+    "print('Max rhat:', result)\n",
+    "# 1.1以上のRhatを確認\n",
+    "for i in rhat_vals:\n",
+    "    if np.max(i.values)>=1.1:\n",
+    "        print(i.name, np.max(i.values), np.mean(i.values), i.values.shape, sep='  ====>  ')\n",
+    "# >> Max rhat: 1.0069816457202962"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32529666-ea98-4ed4-b69e-6278a6fabb6b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 各クラスの事後確率theta\n",
+    "softmax_result = pd.DataFrame(trace['posterior']['theta'].mean(dim=[\"chain\", \"draw\"]).values)\n",
+    "y_pred = softmax_result.idxmax(axis=1)\n",
+    "print(sklearn.metrics.classification_report(y_train[objective_variables].to_numpy(), y_pred.ravel()))\n",
+    "cm = sklearn.metrics.confusion_matrix(y_train[objective_variables].to_numpy(), y_pred.ravel())\n",
+    "print(cm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26e5bab1-a997-41d8-92a3-425f80c796b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 学習データ、テストデータの座標を取得\n",
+    "train_coord = pd.DataFrame({'x':X_train['geometry'].x.to_list(), 'y':X_train['geometry'].y.to_list()})\n",
+    "test_coord = pd.DataFrame({'x':X_test['geometry'].x.to_list(), 'y':X_test['geometry'].y.to_list()})\n",
+    "# 学習データでknn作成\n",
+    "knn = sklearn.neighbors.NearestNeighbors(n_neighbors=5)\n",
+    "knn.fit(train_coord)\n",
+    "# テストデータの各サンプルと最も近い学習データのindexを取得\n",
+    "distances, indices = knn.kneighbors(test_coord)\n",
+    "test_coord['indices'] = indices[:,0]\n",
+    "display(test_coord)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a3f8a72-1497-4a2c-bad0-14a10e9e433c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# テストデータと最も近い学習データの空間相関変数を取得する\n",
+    "z_cars_arr = np.concatenate([trace['posterior']['z_car'+str(i+1)].mean(dim=[\"chain\", \"draw\"]).values.reshape(-1,1) for i, k in enumerate(classK)], axis=1)  # 学習データの空間相関変数の計算\n",
+    "z_cars_arr_test = z_cars_arr[list(indices[:,0]),:]  # テストデータと最も近い学習データの空間相関を各テストデータに対して計算\n",
+    "tau_arr = trace['posterior']['tau'].mean(dim=[\"chain\", \"draw\"]).values\n",
+    "z_cars_arr_test = z_cars_arr_test * tau_arr  # 分散をかける\n",
+    "print(z_cars_arr_test.shape)\n",
+    "# >> (9794, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "928e2b4e-9334-4b5f-a74d-a77d5793c693",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 未知データへの適用\n",
+    "# 回帰係数の推定値\n",
+    "coefs = trace['posterior']['coef'].mean(dim=[\"chain\", \"draw\"]).values\n",
+    "# 切片の推定値\n",
+    "intercepts = trace['posterior']['intercept'].mean(dim=[\"chain\", \"draw\"]).values\n",
+    "# 線形モデル式\n",
+    "mu = X_test[explanatory_variables].to_numpy().dot(coefs) + intercepts + z_cars_arr_test  # 回帰式（係数と切片）と空間相関変数\n",
+    "# ソフトマックス関数に入れる\n",
+    "m = softmax(mu, axis=1)  # ソフトマックス関数に入れて一般化線形モデルへ\n",
+    "# 確率が最大のクラスを取得\n",
+    "m_class = m.argmax(axis=1)  # 最も確率が高いクラスを所属クラスとする\n",
+    "# 精度計算\n",
+    "print(sklearn.metrics.classification_report(y_test[objective_variables].to_numpy(), m_class.ravel()))\n",
+    "cm = sklearn.metrics.confusion_matrix(y_test[objective_variables].to_numpy(), m_class.ravel())\n",
+    "print(cm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf85b058-2bc2-4a54-9945-fac15732d336",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 可視化\n",
+    "# 学習データ\n",
+    "results = y_train.copy()\n",
+    "results['pred'] = y_pred.ravel()\n",
+    "results['diff'] = results[objective_variables]-results['pred']\n",
+    "results.loc[(results['diff']==0), 'diff'] = 0\n",
+    "results.loc[(results['diff']!=0), 'diff'] = 1\n",
+    "point_plot(results, re_shape_tsukuba_mirai_2RasterCrs, linewidth=0.05, markersize=5, title='土壌分類', vmin=0, vmax=1)\n",
+    "\n",
+    "# テストデータ\n",
+    "results = y_test.copy()\n",
+    "results['pred'] = m_class.ravel()\n",
+    "results['diff'] = results[objective_variables]-results['pred']\n",
+    "results.loc[(results['diff']==0), 'diff'] = 0\n",
+    "results.loc[(results['diff']!=0), 'diff'] = 1\n",
+    "point_plot(results, re_shape_tsukuba_mirai_2RasterCrs, linewidth=0.05, markersize=1, title='土壌分類', vmin=0, vmax=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5431676a-f6c8-4d70-923a-89e8bed3d340",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# バイオリンプロット\n",
+    "png_path = 'content/drive/MyDrive/satelite/png/'\n",
+    "os.makedirs(png_path, exist_ok=True)\n",
+    "figsize=(10,6)\n",
+    "plt.rcParams['font.family'] = prop.get_name()\n",
+    "fig=plt.figure(figsize=figsize)\n",
+    "for k, node in enumerate(classK):\n",
+    "    softmax1_org = trace_org['posterior']['coef'].mean(dim=[\"chain\"]).values[:,:,k]\n",
+    "    softmax1 = trace['posterior']['coef'].mean(dim=[\"chain\"]).values[:,:,k]\n",
+    "    corf_df_org = pd.DataFrame(softmax1_org)\n",
+    "    corf_df_org.columns=explanatory_variables\n",
+    "    corf_df_org['intercept'] = trace_org['posterior']['intercept'].mean(dim=[\"chain\"]).values[:,k]\n",
+    "    corf_df_org['tau'] = np.nan\n",
+    "    corf_df_org_stack = corf_df_org.stack().reset_index()\n",
+    "    corf_df_org_stack['space_corr'] = 0\n",
+    "    corf_df_org_stack.columns=['id','col_name','coef','space_corr']\n",
+    "    corf_df = pd.DataFrame(softmax1)\n",
+    "    corf_df.columns=explanatory_variables\n",
+    "    corf_df['intercept'] = trace['posterior']['intercept'].mean(dim=[\"chain\"]).values[:,k]\n",
+    "    corf_df['tau'+str(k)] = trace['posterior']['tau'].mean(dim=[\"chain\"]).values[:,k]\n",
+    "    corf_df_stack = corf_df.stack().reset_index()\n",
+    "    corf_df_stack['space_corr'] = 1\n",
+    "    corf_df_stack.columns=['id','col_name','coef','space_corr']\n",
+    "    corf_df_stack = pd.concat([corf_df_org_stack, corf_df_stack]).reset_index(drop=True)\n",
+    "    \n",
+    "    ax1 = plt.subplot(3,4,k+1)\n",
+    "    img = sns.violinplot(data=corf_df_stack, x='col_name', y='coef', hue=\"space_corr\", split=True, inner=\"quart\", density_norm='width', ax=ax1, linewidth=0.2)\n",
+    "    torf_orgs = {}\n",
+    "    torfs = {}\n",
+    "    for i, col in enumerate(corf_df.columns):\n",
+    "        if 'tau' in col:\n",
+    "            ax1.text(ax1.get_xticks()[i], corf_df[col].mean(), round(corf_df[col].mean(),2), fontsize=3, ha=\"left\", color=\"k\")\n",
+    "            ax1.text(ax1.get_xticks()[i], corf_df[col].quantile(0.95), round(corf_df[col].quantile(0.95),2), fontsize=2, ha=\"left\", color=\"k\")\n",
+    "            ax1.text(ax1.get_xticks()[i], corf_df[col].quantile(0.05), round(corf_df[col].quantile(0.05),2), fontsize=2, ha=\"left\", color=\"k\")\n",
+    "        else:\n",
+    "            ax1.text(ax1.get_xticks()[i], corf_df_org[col].mean(), round(corf_df_org[col].mean(),2), fontsize=3, ha=\"right\", color=\"k\")\n",
+    "            ax1.text(ax1.get_xticks()[i], corf_df[col].mean(), round(corf_df[col].mean(),2), fontsize=3, ha=\"left\", color=\"k\")\n",
+    "\n",
+    "            ax1.text(ax1.get_xticks()[i], corf_df_org[col].quantile(0.95), round(corf_df_org[col].quantile(0.95),2), fontsize=2, ha=\"right\", color=\"k\")\n",
+    "            ax1.text(ax1.get_xticks()[i], corf_df[col].quantile(0.95), round(corf_df[col].quantile(0.95),2), fontsize=2, ha=\"left\", color=\"k\")\n",
+    "\n",
+    "            ax1.text(ax1.get_xticks()[i], corf_df_org[col].quantile(0.05), round(corf_df_org[col].quantile(0.05),2), fontsize=2, ha=\"right\", color=\"k\")\n",
+    "            ax1.text(ax1.get_xticks()[i], corf_df[col].quantile(0.05), round(corf_df[col].quantile(0.05),2), fontsize=2, ha=\"left\", color=\"k\")\n",
+    "\n",
+    "            if col!='intercept':\n",
+    "                torf_orgs[col] = (corf_df_org[col].quantile(0.95)>=0 and corf_df_org[col].quantile(0.05)<=0)\n",
+    "                torfs[col] = (corf_df[col].quantile(0.95)>=0 and corf_df[col].quantile(0.05)<=0)\n",
+    "\n",
+    "    significant_orgs = len([key for key, v in torf_orgs.items() if not v])\n",
+    "    significant = len([key for key, v in torfs.items() if not v])\n",
+    "    ax1.set_xlabel(None)\n",
+    "    ax1.set_ylabel(None)\n",
+    "    plt.setp(ax1.get_xticklabels(), rotation=30, fontsize=4, ha='right')\n",
+    "    plt.setp(ax1.get_yticklabels(), fontsize=4)\n",
+    "    ax1.set_title(f'Class {node}'+' ('+area_use_categories_le[k]+r') coef & $\\tau^{2}$, significant:'+str(significant_orgs)+' and '+str(significant), fontsize=4)\n",
+    "    # plt.suptitle(f'Class {node}'+' ('+area_use_categories_le[k]+r') coefficient & $\\tau^{2}$', y=0.90, fontsize=4)\n",
+    "    handler, label = ax1.get_legend_handles_labels()\n",
+    "    ax1.legend(handler, [\"GLM\",\"ICAR\"], fontsize=4, loc='upper left')\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "plt.figure().clear()\n",
+    "plt.close()\n",
+    "plt.cla()\n",
+    "plt.clf()\n",
+    "del corf_df_org, corf_df_org_stack, corf_df, corf_df_stack, fig\n",
+    "gc.collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39fad2ff-17a2-4de7-86a8-4eb7a43e61e2",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# 学習データの空間相関変数を可視化\n",
+    "png_path = 'content/drive/MyDrive/satelite/png/'\n",
+    "os.makedirs(png_path, exist_ok=True)\n",
+    "figsize=(8,6)\n",
+    "plt.rcParams['font.family'] = prop.get_name()\n",
+    "fig=plt.figure(figsize=figsize)\n",
+    "for k, node in enumerate(['z_car'+str(i+1) for i in classK]):\n",
+    "    plot_icar = ground_truth_2RasterCrs_concat_crop_exploded_stats_2point.loc[X_train.index,:].copy()\n",
+    "    icar = trace['posterior'][node].mean(dim=[\"chain\",\"draw\"]).values\n",
+    "    plot_icar[node] = icar\n",
+    "    ax = plt.subplot(3,4,k+1)\n",
+    "    divider = mpl_toolkits.axes_grid1.make_axes_locatable(ax)\n",
+    "    cax = divider.append_axes('right', '5%', pad='3%')\n",
+    "    img = plot_icar.plot(column=node, cmap='RdYlBu_r', edgecolor='k', legend=True, ax=ax, cax=cax, linewidth=0.05, markersize=5)\n",
+    "    cax.tick_params(labelsize='4', width=0.4, length=5)\n",
+    "    plt.setp(ax.get_xticklabels(), fontsize=4)\n",
+    "    plt.setp(ax.get_yticklabels(), fontsize=4)\n",
+    "    ax.set_title(node+' '+area_use_categories_le[k], fontsize=4)\n",
+    "    re_shape_tsukuba_mirai_2RasterCrs.plot(facecolor='none', edgecolor='k', alpha=0.8, ax=ax, linewidth=0.2)\n",
+    "    ax.yaxis.offsetText.set_fontsize(4)\n",
+    "    ax.yaxis.set_major_formatter(ptick.ScalarFormatter(useMathText=True))\n",
+    "    ax.ticklabel_format(style='sci', axis='y', scilimits=(0,0))\n",
+    "    ax.grid(False)\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "plt.figure().clear()\n",
+    "plt.close()\n",
+    "plt.cla()\n",
+    "plt.clf()\n",
+    "del plot_icar, fig\n",
+    "gc.collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "086a2b0c-1bb2-482e-b758-c4265eaf181c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2170,6 +2556,14 @@
     "del plot_icar, fig\n",
     "gc.collect()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be6fc9ba-c4ab-4051-9640-b446e6bd7c37",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
