--- a/articles/024_衛星データでつくばみらい市の土壌分類をしてみた_地理空間データ解析.md
+++ b/articles/024_衛星データでつくばみらい市の土壌分類をしてみた_地理空間データ解析.md
@@ -1938,7 +1938,7 @@ point_plot(results, re_shape_tsukuba_mirai_2RasterCrs, linewidth=0.05, markersiz
 ![32_ICAR2_テストデータ推論可視化.png](https://qiita-image-store.s3.ap-northeast-1.amazonaws.com/0/542929/1209cea5-c04c-08bb-39db-07772990457d.png)
 
 ### ICARモデル②を使って考察
-空間相関を考慮しないベイズロジスティック回帰の回帰係数、切片とICARモデル②の回帰係数、切片、空間相関変数の事後分布をバイオリンプロットで可視化して見てみる。  
+空間相関を考慮しないベイズロジスティック回帰の回帰係数、切片とICARモデル②の回帰係数、切片、空間相関変数の事後分布をバイオリンプロットで可視化して見てみる。（オッズ比の分析とかはしない…。）
 ```python
 # バイオリンプロット
 png_path = '/content/drive/MyDrive/satelite/png/'
@@ -2194,3 +2194,301 @@ ICARモデルが最も良いモデルだった。
 次は時系列も考慮した時空間モデルを試してみたいなぁ。  
 
 以上！
+
+# 追記
+この記事で以下のように書いたが、
+
+>モデルの構築パターンは2つある。 
+（中略）  
+1つ目が空間相関変数そのものは1つしかないが、その分散がクラスによって異なることでクラスごとに固有の空間相関を表現する方法。2つ目が単純に空間相関変数をクラスの数分用意する方法である。  
+
+これもう1つパターンがあるなと。パターン1と2の組み合わせを忘れていた。  
+空間相関変数がクラスの数分あって、かつ分散もクラスの数分あるパターン。  
+これも一応やってみて、結果を見ておく。  
+結論を言うと、モデリングの精度自体はパターン2の方が良かった。（パターン1よりはよかった。）  
+
+モデル構築。`tau = pm.Uniform('tau', lower=0, upper=100, dims=("obj_var", ))`のように空間相関変数の分散を10次元で定義。
+```python
+with pm.Model() as model:    
+    # coords(次元やインデックスを定義)
+    model.add_coord('data', values=range(X_train.shape[0]), mutable=True)
+    model.add_coord('var', values=explanatory_variables, mutable=True)
+    model.add_coord('obj_var', values=sorted(y_train[objective_variables].unique()), mutable=True)
+    
+    # 変数
+    x = pm.MutableData('x', X_train[explanatory_variables].to_numpy(), dims=('data', 'var'))
+    y = pm.MutableData("y", y_train[objective_variables].to_numpy(), dims=('data', ))
+    weights = pm.MutableData("weights", sample_ws, dims=('data', ))
+    print('x shape', x.eval().shape)
+    print('y shape', y.eval().shape)
+    print('weights shape', weights.eval().shape)
+
+    # 分散
+    tau = pm.Uniform('tau', lower=0, upper=100, dims=("obj_var", ))
+    print('tau shape', tau.eval().shape)
+    
+    # 推論パラメータの事前分布
+    coef_ = pm.Normal('coef', mu=0.0, sigma=1, dims=("var",'obj_var'))  # 各係数の事前分布は正規分布
+    intercept_ = pm.Normal('intercept', mu=0.0, sigma=1.0, dims=("obj_var", ))  # 切片の事前分布は正規分布
+    print('coef shape', coef_.eval().shape)
+    print('intercept shape', intercept_.eval().shape)
+    
+    # ICARを10個入ったリストを作ってconcatenateしてdata数×class数の空間相関変数としている
+    ICAR10s = [pm.ICAR('z_car'+str(i+1), W=adj_symmetry, sigma=1, dims=('data', )).reshape((len(y.eval()), 1)) for i, k in enumerate(classK)]
+    ICAR10s = pm.math.concatenate(ICAR10s, axis=1)
+
+    print('ICAR10s type', ICAR10s.type)
+    # linear model --> 𝑦 = coef_𝑥 + intercept_ + eps_ + ICARs
+    mu = pm.Deterministic("mu", x.dot(coef_)+intercept_+(ICAR10s*tau), dims=('data', 'obj_var'))
+    print('x.dot(coef_) shape', x.dot(coef_).eval().shape)
+    print('ICAR10s*tau type', (ICAR10s*tau).type)
+    theta = pm.Deterministic("theta", pm.math.softmax(mu, axis=1), dims=('data', 'obj_var'))  # axis設定しないとダメ
+    #y_pred = pm.Categorical("y_pred", p=theta, observed=y, dims='data')
+    y_pred = pm.Potential('y_pred', (weights * pm.logp(pm.Categorical.dist(p=theta), y)).sum(axis=0), dims=('data', ))
+    
+# モデル構造
+modeldag = pm.model_to_graphviz(model)
+display(modeldag)
+```
+![image.png](https://qiita-image-store.s3.ap-northeast-1.amazonaws.com/0/542929/a99c84d7-56c8-b5e1-35ec-2112f8905b3d.png)
+
+トレースプロットと$\hat{R}$確認。問題なし。
+```python
+# plot_trace
+az.plot_trace(trace, backend_kwargs={"constrained_layout":True}, var_names=["coef","intercept",'tau'])#+['z_car'+str(i) for i in range(1,11)])
+plt.show()
+
+# MCMCの収束を評価
+rhat_vals = az.rhat(trace).values()
+
+# 最大のRhatを確認
+result = np.max([np.max(i.values) for i in rhat_vals])# if i.name in ["coef","intercept",'z_car','mu','theta','tau']])
+print('Max rhat:', result)
+# 1.1以上のRhatを確認
+for i in rhat_vals:
+    if np.max(i.values)>=1.1:
+        print(i.name, np.max(i.values), np.mean(i.values), i.values.shape, sep='  ====>  ')
+# >> Max rhat: 1.0069816457202962
+```
+![image.png](https://qiita-image-store.s3.ap-northeast-1.amazonaws.com/0/542929/7c9334fb-f20f-9135-87a3-a0444d51a9f3.png)
+
+
+学習データの精度確認。パターン1より良く、パターン2より悪い。
+```python
+# 各クラスの事後確率theta
+softmax_result = pd.DataFrame(trace['posterior']['theta'].mean(dim=["chain", "draw"]).values)
+y_pred = softmax_result.idxmax(axis=1)
+print(sklearn.metrics.classification_report(y_train[objective_variables].to_numpy(), y_pred.ravel()))
+cm = sklearn.metrics.confusion_matrix(y_train[objective_variables].to_numpy(), y_pred.ravel())
+print(cm)
+```
+![image.png](https://qiita-image-store.s3.ap-northeast-1.amazonaws.com/0/542929/27ca3686-b815-ac50-3cda-24c70ee538f6.png)
+
+テストデータの各サンプルと最も近い学習データのindexを取得するコード。
+```python
+# 学習データ、テストデータの座標を取得
+train_coord = pd.DataFrame({'x':X_train['geometry'].x.to_list(), 'y':X_train['geometry'].y.to_list()})
+test_coord = pd.DataFrame({'x':X_test['geometry'].x.to_list(), 'y':X_test['geometry'].y.to_list()})
+# 学習データでknn作成
+knn = sklearn.neighbors.NearestNeighbors(n_neighbors=5)
+knn.fit(train_coord)
+# テストデータの各サンプルと最も近い学習データのindexを取得
+distances, indices = knn.kneighbors(test_coord)
+test_coord['indices'] = indices[:,0]
+display(test_coord)
+
+# テストデータと最も近い学習データの空間相関変数を取得する
+z_cars_arr = np.concatenate([trace['posterior']['z_car'+str(i+1)].mean(dim=["chain", "draw"]).values.reshape(-1,1) for i, k in enumerate(classK)], axis=1)  # 学習データの空間相関変数の計算
+z_cars_arr_test = z_cars_arr[list(indices[:,0]),:]  # テストデータと最も近い学習データの空間相関を各テストデータに対して計算
+tau_arr = trace['posterior']['tau'].mean(dim=["chain", "draw"]).values
+z_cars_arr_test = z_cars_arr_test * tau_arr  # 分散をかける
+print(z_cars_arr_test.shape)
+# >> (9794, 10)
+```
+
+テストデータの精度確認。パターン1より良く、パターン2よりやや悪い。
+```python
+# 未知データへの適用
+# 回帰係数の推定値
+coefs = trace['posterior']['coef'].mean(dim=["chain", "draw"]).values
+# 切片の推定値
+intercepts = trace['posterior']['intercept'].mean(dim=["chain", "draw"]).values
+# 線形モデル式
+mu = X_test[explanatory_variables].to_numpy().dot(coefs) + intercepts + z_cars_arr_test  # 回帰式（係数と切片）と空間相関変数
+# ソフトマックス関数に入れる
+m = softmax(mu, axis=1)  # ソフトマックス関数に入れて一般化線形モデルへ
+# 確率が最大のクラスを取得
+m_class = m.argmax(axis=1)  # 最も確率が高いクラスを所属クラスとする
+# 精度計算
+print(sklearn.metrics.classification_report(y_test[objective_variables].to_numpy(), m_class.ravel()))
+cm = sklearn.metrics.confusion_matrix(y_test[objective_variables].to_numpy(), m_class.ravel())
+print(cm)
+```
+![image.png](https://qiita-image-store.s3.ap-northeast-1.amazonaws.com/0/542929/ea998da7-a825-5e5c-2a13-f26f65fc10df.png)
+
+推論結果を可視化。パッと見、パターン2と似ている。北部の建物用地の分類ミスが多いかなぁ。
+```python
+# 可視化
+# 学習データ
+results = y_train.copy()
+results['pred'] = y_pred.ravel()
+results['diff'] = results[objective_variables]-results['pred']
+results.loc[(results['diff']==0), 'diff'] = 0
+results.loc[(results['diff']!=0), 'diff'] = 1
+point_plot(results, re_shape_tsukuba_mirai_2RasterCrs, linewidth=0.05, markersize=5, title='土壌分類', vmin=0, vmax=1)
+
+# テストデータ
+results = y_test.copy()
+results['pred'] = m_class.ravel()
+results['diff'] = results[objective_variables]-results['pred']
+results.loc[(results['diff']==0), 'diff'] = 0
+results.loc[(results['diff']!=0), 'diff'] = 1
+point_plot(results, re_shape_tsukuba_mirai_2RasterCrs, linewidth=0.05, markersize=1, title='土壌分類', vmin=0, vmax=1)
+```
+![image.png](https://qiita-image-store.s3.ap-northeast-1.amazonaws.com/0/542929/3e2f379f-1286-e874-b88d-610640f07077.png)
+![image.png](https://qiita-image-store.s3.ap-northeast-1.amazonaws.com/0/542929/37ca100d-ccfb-2670-fb5a-4560c205ea82.png)
+
+回帰係数と空間相関変数の分散の推定結果のバイオリンプロット。  
+水田と建物用地の空間相関変数の影響が小さいことがわかる。モデルは、この2つのクラスは説明変数である程度説明できると言っているようだ。
+```python
+# バイオリンプロット
+png_path = 'content/drive/MyDrive/satelite/png/'
+os.makedirs(png_path, exist_ok=True)
+figsize=(10,6)
+plt.rcParams['font.family'] = prop.get_name()
+fig=plt.figure(figsize=figsize)
+for k, node in enumerate(classK):
+    softmax1_org = trace_org['posterior']['coef'].mean(dim=["chain"]).values[:,:,k]
+    softmax1 = trace['posterior']['coef'].mean(dim=["chain"]).values[:,:,k]
+    corf_df_org = pd.DataFrame(softmax1_org)
+    corf_df_org.columns=explanatory_variables
+    corf_df_org['intercept'] = trace_org['posterior']['intercept'].mean(dim=["chain"]).values[:,k]
+    corf_df_org['tau'] = np.nan
+    corf_df_org_stack = corf_df_org.stack().reset_index()
+    corf_df_org_stack['space_corr'] = 0
+    corf_df_org_stack.columns=['id','col_name','coef','space_corr']
+    corf_df = pd.DataFrame(softmax1)
+    corf_df.columns=explanatory_variables
+    corf_df['intercept'] = trace['posterior']['intercept'].mean(dim=["chain"]).values[:,k]
+    corf_df['tau'+str(k)] = trace['posterior']['tau'].mean(dim=["chain"]).values[:,k]
+    corf_df_stack = corf_df.stack().reset_index()
+    corf_df_stack['space_corr'] = 1
+    corf_df_stack.columns=['id','col_name','coef','space_corr']
+    corf_df_stack = pd.concat([corf_df_org_stack, corf_df_stack]).reset_index(drop=True)
+    
+    ax1 = plt.subplot(3,4,k+1)
+    img = sns.violinplot(data=corf_df_stack, x='col_name', y='coef', hue="space_corr", split=True, inner="quart", density_norm='width', ax=ax1, linewidth=0.2)
+    torf_orgs = {}
+    torfs = {}
+    for i, col in enumerate(corf_df.columns):
+        if 'tau' in col:
+            ax1.text(ax1.get_xticks()[i], corf_df[col].mean(), round(corf_df[col].mean(),2), fontsize=3, ha="left", color="k")
+            ax1.text(ax1.get_xticks()[i], corf_df[col].quantile(0.95), round(corf_df[col].quantile(0.95),2), fontsize=2, ha="left", color="k")
+            ax1.text(ax1.get_xticks()[i], corf_df[col].quantile(0.05), round(corf_df[col].quantile(0.05),2), fontsize=2, ha="left", color="k")
+        else:
+            ax1.text(ax1.get_xticks()[i], corf_df_org[col].mean(), round(corf_df_org[col].mean(),2), fontsize=3, ha="right", color="k")
+            ax1.text(ax1.get_xticks()[i], corf_df[col].mean(), round(corf_df[col].mean(),2), fontsize=3, ha="left", color="k")
+
+            ax1.text(ax1.get_xticks()[i], corf_df_org[col].quantile(0.95), round(corf_df_org[col].quantile(0.95),2), fontsize=2, ha="right", color="k")
+            ax1.text(ax1.get_xticks()[i], corf_df[col].quantile(0.95), round(corf_df[col].quantile(0.95),2), fontsize=2, ha="left", color="k")
+
+            ax1.text(ax1.get_xticks()[i], corf_df_org[col].quantile(0.05), round(corf_df_org[col].quantile(0.05),2), fontsize=2, ha="right", color="k")
+            ax1.text(ax1.get_xticks()[i], corf_df[col].quantile(0.05), round(corf_df[col].quantile(0.05),2), fontsize=2, ha="left", color="k")
+
+            if col!='intercept':
+                torf_orgs[col] = (corf_df_org[col].quantile(0.95)>=0 and corf_df_org[col].quantile(0.05)<=0)
+                torfs[col] = (corf_df[col].quantile(0.95)>=0 and corf_df[col].quantile(0.05)<=0)
+
+    significant_orgs = len([key for key, v in torf_orgs.items() if not v])
+    significant = len([key for key, v in torfs.items() if not v])
+    ax1.set_xlabel(None)
+    ax1.set_ylabel(None)
+    plt.setp(ax1.get_xticklabels(), rotation=30, fontsize=4, ha='right')
+    plt.setp(ax1.get_yticklabels(), fontsize=4)
+    ax1.set_title(f'Class {node}'+' ('+area_use_categories_le[k]+r') coef & $\tau^{2}$, significant:'+str(significant_orgs)+' and '+str(significant), fontsize=4)
+    # plt.suptitle(f'Class {node}'+' ('+area_use_categories_le[k]+r') coefficient & $\tau^{2}$', y=0.90, fontsize=4)
+    handler, label = ax1.get_legend_handles_labels()
+    ax1.legend(handler, ["GLM","ICAR"], fontsize=4, loc='upper left')
+plt.tight_layout()
+plt.show()
+plt.figure().clear()
+plt.close()
+plt.cla()
+plt.clf()
+del corf_df_org, corf_df_org_stack, corf_df, corf_df_stack, fig
+gc.collect()
+```
+![image.png](https://qiita-image-store.s3.ap-northeast-1.amazonaws.com/0/542929/d7543615-dca4-25ed-3f93-d1228a35dff4.png)
+
+学習データとテストデータの空間相関変数を可視化して空間パターンを見る。  
+空間パターンとしてはパターン2と似ているが、やはり水田と建物用地の空間相関変数の絶対値は小さい。そして他のクラスの空間相関変数の絶対値はパターン2よりも大きくなっている。  
+パターン2であった、水田の中にも建物用地があるような空間パターンはこのモデルでは見られないようだ。  
+北部の建物用地の空間パターンも無いので、パターン2の方が納得感はあるかなぁ。  
+正直こっちのモデルの方が良い結果になるんじゃないかと思ってたが、予想が外れた。原因はよくわかんないや。
+```python
+# 学習データの空間相関変数を可視化
+png_path = 'content/drive/MyDrive/satelite/png/'
+os.makedirs(png_path, exist_ok=True)
+figsize=(8,6)
+plt.rcParams['font.family'] = prop.get_name()
+fig=plt.figure(figsize=figsize)
+for k, node in enumerate(['z_car'+str(i+1) for i in classK]):
+    plot_icar = ground_truth_2RasterCrs_concat_crop_exploded_stats_2point.loc[X_train.index,:].copy()
+    icar = trace['posterior'][node].mean(dim=["chain","draw"]).values
+    plot_icar[node] = icar
+    ax = plt.subplot(3,4,k+1)
+    divider = mpl_toolkits.axes_grid1.make_axes_locatable(ax)
+    cax = divider.append_axes('right', '5%', pad='3%')
+    img = plot_icar.plot(column=node, cmap='RdYlBu_r', edgecolor='k', legend=True, ax=ax, cax=cax, linewidth=0.05, markersize=5)
+    cax.tick_params(labelsize='4', width=0.4, length=5)
+    plt.setp(ax.get_xticklabels(), fontsize=4)
+    plt.setp(ax.get_yticklabels(), fontsize=4)
+    ax.set_title(node+' '+area_use_categories_le[k], fontsize=4)
+    re_shape_tsukuba_mirai_2RasterCrs.plot(facecolor='none', edgecolor='k', alpha=0.8, ax=ax, linewidth=0.2)
+    ax.yaxis.offsetText.set_fontsize(4)
+    ax.yaxis.set_major_formatter(ptick.ScalarFormatter(useMathText=True))
+    ax.ticklabel_format(style='sci', axis='y', scilimits=(0,0))
+    ax.grid(False)
+plt.tight_layout()
+plt.show()
+plt.figure().clear()
+plt.close()
+plt.cla()
+plt.clf()
+del plot_icar, fig
+gc.collect()
+
+# テストデータの空間相関変数（最も近い学習データの空間相関変数を取得した結果）を可視化
+png_path = 'content/drive/MyDrive/satelite/png/'
+os.makedirs(png_path, exist_ok=True)
+figsize=(8,6)
+plt.rcParams['font.family'] = prop.get_name()
+fig=plt.figure(figsize=figsize)
+for k, node in enumerate(['z_car'+str(i+1) for i in classK]):
+    plot_icar = ground_truth_2RasterCrs_concat_crop_exploded_stats_2point.loc[X_test.index,:].copy()
+    icar = z_cars_arr_test[:,k]
+    plot_icar[node] = icar
+    ax = plt.subplot(3,4,k+1)
+    divider = mpl_toolkits.axes_grid1.make_axes_locatable(ax)
+    cax = divider.append_axes('right', '5%', pad='3%')
+    img = plot_icar.plot(column=node, cmap='RdYlBu_r', edgecolor='k', legend=True, ax=ax, cax=cax, linewidth=0.05, markersize=1)
+    cax.tick_params(labelsize='4', width=0.4, length=5)
+    plt.setp(ax.get_xticklabels(), fontsize=4)
+    plt.setp(ax.get_yticklabels(), fontsize=4)
+    ax.set_title(node+' '+area_use_categories_le[k], fontsize=4)
+    re_shape_tsukuba_mirai_2RasterCrs.plot(facecolor='none', edgecolor='k', alpha=0.8, ax=ax, linewidth=0.2)
+    ax.yaxis.offsetText.set_fontsize(4)
+    ax.yaxis.set_major_formatter(ptick.ScalarFormatter(useMathText=True))
+    ax.ticklabel_format(style='sci', axis='y', scilimits=(0,0))
+    ax.grid(False)
+plt.tight_layout()
+plt.show()
+plt.figure().clear()
+plt.close()
+plt.cla()
+plt.clf()
+del plot_icar, fig
+gc.collect()
+```
+![image.png](https://qiita-image-store.s3.ap-northeast-1.amazonaws.com/0/542929/ec1ebf58-b6e5-e9e2-55df-b3ff895e955b.png)
+![image.png](https://qiita-image-store.s3.ap-northeast-1.amazonaws.com/0/542929/fc55f8de-9294-368a-ee49-ec633bf17c00.png)
