Index Formula List

--- a/articles/024_衛星データでつくばみらい市の土壌分類をしてみた_地理空間データ解析.md
+++ b/articles/024_衛星データでつくばみらい市の土壌分類をしてみた_地理空間データ解析.md
@@ -62,6 +62,7 @@
 - [[書籍]基礎からわかるリモートセンシング](https://www.rikohtosho.co.jp/book/721/)
 - [Sentinel-2A / 2B / 2C / 2D 概要](https://www.restec.or.jp/satellite/sentinel-2-a-2-b.html)
 - [esri 指数ギャラリー](https://pro.arcgis.com/ja/pro-app/3.1/help/data/imagery/indices-gallery.htm)
+- [Index Formula List](https://rindcalc.readthedocs.io/en/latest/Index%20Formula%20List.html)
 - [[PDF file]時系列LANDSATデータによる足尾荒廃山地における植生回復モニタリング](https://www.jstage.jst.go.jp/article/jsprs/60/4/60_200/_pdf)
 - [(研究成果) 水田の代かき時期を衛星データで広域把握 用語の解説：MNDWI](https://www.naro.go.jp/publicity_report/press/laboratory/nire/135613.html)
 - [[PDF file]尾瀬地域における衛星リモートセンシングによる植生モニタリング手法の検討](https://eprints.lib.hokudai.ac.jp/dspace/bitstream/2115/84980/1/22_p343-352_LT80.pdf)
