--- a/articles/024_衛星データでつくばみらい市の土壌分類をしてみた_地理空間データ解析.md
+++ b/articles/024_衛星データでつくばみらい市の土壌分類をしてみた_地理空間データ解析.md
@@ -1412,7 +1412,7 @@ print(cm)
 ![18_ベイズロジスティックテストデータ精度.png](https://qiita-image-store.s3.ap-northeast-1.amazonaws.com/0/542929/c9343679-2fdb-5380-f622-955b65b1a0ff.png)
 
 ## 3. 多項ICARモデル
-## Intrinsic CARモデル概要
+### Intrinsic CARモデル概要
 いよいよ、空間相関を考慮したモデルを作っていく。  
 まずCARモデルの説明を簡単にしていく。（参考：[[書籍]Rではじめる地理空間データの統計解析入門](https://www.kspub.co.jp/book/detail/5273036.html)）  
 
@@ -1445,8 +1445,8 @@ z_{i}|z_{j{\neq}i} \sim \mathcal{N}(\frac{\sum_{j} \omega_{ij}z_{j}}{\sum_{j} \o
 （ただこの場合、空間相関成分の割合をどう出すのかわかっていない…。$\frac{\tau^{2}}{\sigma^2+\tau^{2}}$だと$\beta_{k}$の影響見ていないしな…。本にも書いてなかった…。）  
 説明変数も考慮した上記ICARモデルをソフトマックス関数に入れてGLMを拡張することで、空間相関を考慮した多項分類モデルを構築する。
 
-## ICARモデル構築
-### 隣接行列の計算
+### ICARモデル構築
+#### 隣接行列の計算
 まずは各地域の隣接地域を計算して隣接行列を作る。  
 最近隣4地域を隣接地域として計算する。  
 `libpysal.cg.KDTree`と`libpysal.weights.KNN`を使って隣接行列を作り可視化する。
@@ -1505,7 +1505,7 @@ print(K)
 # >> 10
 ```
 
-### ICARモデル①：空間相関変数は1つのみ 
+#### ICARモデル①：空間相関変数は1つのみ 
 モデルの構築パターンは2つある。  
 多項ロジスティック回帰の場合、各クラスに空間相関成分を考慮する必要がある。水田の分類の空間相関、建物用地の分類の空間相関、森林の分類の空間相関…など。
 これに対応するパターンが2つあり、1つ目が空間相関変数そのものは1つしかないが、その分散がクラスによって異なることでクラスごとに固有の空間相関を表現する方法。2つ目が単純に空間相関変数をクラスの数分用意する方法である。なお今回、うまく収束しない、かつかなり時間がかかるため誤差項は導入せず、回帰係数、切片、空間相関変数のパラメータ推定を実施している。  
@@ -1750,7 +1750,7 @@ point_plot(results, re_shape_tsukuba_mirai_2RasterCrs, linewidth=0.05, markersiz
 テストデータ
 ![26_ICAR1_テストデータ推論可視化.png](https://qiita-image-store.s3.ap-northeast-1.amazonaws.com/0/542929/0f3f388e-adc7-4a92-5774-9e5185b7cafd.png)
 
-### ICARモデル②：空間相関変数をクラスの数分定義
+#### ICARモデル②：空間相関変数をクラスの数分定義
 2つ目のパターン、単純に空間相関変数をクラスの数分用意する方法を実施する。  
 
 以下のコードでは、`pm.ICAR`をクラスの数である10個分用意して空間相関変数10個を`ICAR10s`と定義している。空間相関変数10個の分散は共通したものとして`tau = pm.Uniform('tau', lower=0, upper=100)`のようにスカラーとして定義。  
@@ -1938,7 +1938,7 @@ point_plot(results, re_shape_tsukuba_mirai_2RasterCrs, linewidth=0.05, markersiz
 テストデータ
 ![32_ICAR2_テストデータ推論可視化.png](https://qiita-image-store.s3.ap-northeast-1.amazonaws.com/0/542929/1209cea5-c04c-08bb-39db-07772990457d.png)
 
-### ICARモデル②を使って考察
+#### ICARモデル②を使って考察
 空間相関を考慮しないベイズロジスティック回帰の回帰係数、切片とICARモデル②の回帰係数、切片、空間相関変数の事後分布をバイオリンプロットで可視化して見てみる。（オッズ比の分析とかはしない…。）
 ```python
 # バイオリンプロット
